# portkiller-win

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs  ports.rs  process.rs
src-tauri/src/utils/: netstat.rs
src/components/: Settings.tsx  TitleBar.tsx
src/components/layout/: DetailPanel.tsx  MainContent.tsx  Sidebar.tsx
src/components/ports/: PortRow.tsx  PortTable.tsx  PortTreeView.tsx
src/components/ui/: Badge.tsx  Button.tsx  Input.tsx  StatusDot.tsx  Toast.tsx  Toggle.tsx
src/hooks/: useKeyboardShortcuts.ts  useNotifications.ts  usePorts.ts  useSettings.ts  useToast.ts
src/stores/: appStore.ts
src/styles/: globals.css
src/types/: index.ts
